  in conjunction with -Tslicing
- added dar_split command to provide on-fly multi-volume archive support
  on tape medium
- libdar relies on libthreadar (if available) to split its work among
  several threads
- dar aborts upon not found user target in included file instead of
  ignoring it
- added sha512 hashing algorithm beside already available md5 and sha1

from 2.4.16 to 2.4.17
- fixing issue when case insensitive comparison was requested and invalid
  wide char for the current local was met in a filename. In such situation
  the corresponding file was never saved before (considering a filesystem
  error for that file), while now the ASCII case insensitivity is used
  as fallback.

from 2.4.15 to 2.4.16
- fixing archive listing displayed information for catalogue size when
  archive is read in --sequential-read mode
- fixing bug that avoided dar releases 2.4.x up to 2.4.15 to read encrypted
  archive generated by dar release 2.3.x and below
- adding informational note at the end of ./configure script execution
  when --enable-mode has not been used.
- adding support for case sensitivity in filename comparison (-an option)
  for other character sets than POSIX/C locale like Cyrillic for example.
- fixing bashisms in doc/samples scripts

from 2.4.14 to 2.4.15
- fixing bug met when reading an encrypted archive in sequential mode
- fixing bug met when reading an encrypted archive in sequential mode from
  an anonymous pipe
- changed option '-;' to -9 as '-;' does not work on all systems with getopt
  (only long option equivalent --min-digits worked) for dar, dar_cp,
  dar_manager, dar_xform and dar_slave commands.
- fixing bug met when restoring deleted files in sequential read mode and
  some directory where they should be "restored" are not readable or
  could not be restored earlier
- adding extra buffer to handle sequential read of encrypted archive
  when the last crypto block contains some but not all clear data after
  encrypted one (the archive trailer).