@@ -44,9 +44,6 @@ string is a command to be launched between slices. See dar(1) man page (same opt
 -Q
 Do not display any message on stderr when not launched from a terminal (for example when launched from an at job or crontab). Remains that any question to the user will be assumed a 'no' answer, which most of the time will abort the program.
 .TP 20
--j
-when virtual memory is exhausted, as user to make room before trying to continue. By default, when memory is exhausted dar aborts.
-.TP 20
 -9 <num>
 Defines the minimum number of digits to use for archive slice numbers. See the same option in dar man page for more details.
 .SH EXIT CODES
