@@ -59,9 +59,6 @@ when using k M G T E Z Y prefixes to define a size, use the historical computer 
 -Q
 Do not display any message on stderr when not launched from a terminal (for example when launched from an at job or crontab). Remains that any question to the user will be assumed a 'no' answer, which most of the time will abort the program.
 .TP 20
--j
-when virtual memory is exhausted, as user to make room before trying to continue. By default, when memory is exhausted dar aborts.
-.TP 20
 -^ perm[:user[:group]]
 defines the permission and ownership to use for created slices.
 .TP 20
