@@ -210,7 +210,6 @@ static bool command_line(shell_interaction & dialog,
 		execute += string(" ; ") + optarg;
             break;
 	case 'Q':
-	case 'j':
 	    break;  // ignore this option already parsed during initialization (dar_suite.cpp)
 	case '9':
 	    if(optarg == NULL)
