@@ -112,15 +112,13 @@ extern void line_tools_look_for(const std::vector<char> & arguments,
 #if HAVE_GETOPT_LONG
     /// \param[in] long_options is the optional list of long options (an NULL pointer is acceptable for no long option)
 #endif
-    /// \param[out] j_is_present is set to true if -j option or its equivalent long option has been found on command-line
     /// \param[out] Q_is_present is set to true if -Q option or its equivalent long option has been found on command-line
-extern void line_tools_look_for_jQ(S_I argc,
+extern void line_tools_look_for_Q(S_I argc,
 				   char *const argv[],
 				   const char *getopt_string,
 #if HAVE_GETOPT_LONG
 				   const struct option *long_options,
 #endif
-				   bool & j_is_present,
 				   bool & Q_is_present);
 
 
